--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,6 +128,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - CONSUMER_GROUP_ID=stock-metrics-group
       - SLIDING_WINDOW_SECONDS=10
+      - OUTPUT_INTERVAL_SECONDS=6
     volumes:
       - ./output:/app/output
     networks:
